--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./build",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./inertia/lib/*"]
+      "@/*": ["./inertia/lib/*"],
     }
   },
   "exclude": ["./inertia/**/*", "node_modules", "build"]
