--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@adonisjs/static": "^1.1.1",
     "@adonisjs/vite": "^3.0.0",
     "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@inertiajs/react": "^1.2.0",
     "@radix-ui/react-dialog": "^1.1.1",
